# hod_mod

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  INSTALL_GUIX.md  LICENSE  README.md  REPORT_strategy.md  TODO  channels.scm  environment.yml  manifest.scm  pyproject.toml  requirements-guix.txt
.github/workflows/: tests.yml
configs/: hod_fit_comparat2025_G1025.yml  hod_fit_comparat2025_G1075.yml  hod_fit_more2015_cmass.yml  hod_fit_more2015_cmass_joint.yml  hod_fit_more2015_lowz.yml
configs/benchmarks/: benchmark_guo2018.yml  benchmark_guo2019.yml  benchmark_kravtsov2004.yml  benchmark_lange2025_bgs2_bwpd_esd.yml  benchmark_lange2025_bgs2_bwpd_hsc.yml  benchmark_lange2025_bgs2_bwpd_wp.yml  benchmark_lange2025_bgs2_des.yml  benchmark_lange2025_bgs2_ds_des.yml  benchmark_lange2025_bgs2_ds_hsc.yml  benchmark_lange2025_bgs2_hsc.yml  benchmark_lange2025_bgs2_wp.yml  benchmark_lange2025_bgs3_bwpd_esd.yml  benchmark_lange2025_bgs3_bwpd_hsc.yml  benchmark_lange2025_bgs3_bwpd_wp.yml  benchmark_lange2025_bgs3_des.yml  benchmark_lange2025_bgs3_hsc.yml  benchmark_lange2025_lrg1_bwpd_esd.yml  benchmark_lange2025_lrg1_bwpd_hsc.yml  benchmark_lange2025_lrg1_bwpd_wp.yml  benchmark_lange2025_lrg1_des.yml  benchmark_lange2025_lrg1_hsc.yml  benchmark_lange2025_lrg2_bwpd_esd.yml  benchmark_lange2025_lrg2_bwpd_hsc.yml  benchmark_lange2025_lrg2_bwpd_wp.yml  benchmark_lange2025_lrg2_hsc.yml  benchmark_leauthaud2012.yml  benchmark_leauthaud2012_ds.yml  benchmark_more2015.yml  benchmark_more2015_logM11_12.yml  benchmark_more2015_logM11_12_freecosmo.yml  benchmark_more2015_logM11p3_12.yml  benchmark_more2015_logM11p4_12.yml  benchmark_vanutert2016.yml  benchmark_vanutert2016_ds.yml  benchmark_zacharegkas2025.yml  benchmark_zacharegkas2025_ds.yml  benchmark_zheng2007.yml  benchmark_zumandelbaum2015.yml  benchmark_zumandelbaum2015_bin_10p2_10p6.yml  benchmark_zumandelbaum2015_bin_10p6_11p0.yml  (+6 more)
configs/fitting/: BGS_LS10_Comparat2025_Mstar10_LargeScaleCuts.yml  BGS_LS10_Comparat2025_Mstar10_NoScaleCuts.yml  More15_joint_example.yml  More15_wp_example.yml  TestA1_wp_rp500.yml  TestA2_wp_rp300.yml  TestA3_wp_rp300_inc.yml  TestA4_wp_rp100_offcen_inc.yml  TestA5_wp_rp050_offcen_inc.yml  TestB1_esd_rp1500.yml  TestB2_esd_rp1500_ia.yml  TestB3_esd_rp500_ia_stellar.yml  TestB4_esd_rp300_ia_stellar_offcen.yml
data/guo2018_sdss/: README_data.md  metadata.json  wp_mstar10_lowz.csv
data/guo2019_eboss_elg/: README_data.md  metadata.json  wp_elg_z08.csv
data/lange2025_desi_dr1/: README_data.md  digitize_figures.py
data/leauthaud2012_cosmos/: README_data.md  ds_photo_z2_thresh106.csv  metadata.json  wp_photo_z2_thresh106.csv
data/more2015_boss_cmass/: digitize_fig3.py  metadata.json  wp_cmass_z052.csv
data/vanutert2016_gama/: README_data.md  ds_bin2_104_108.csv  metadata.json  wp_bin2_104_108.csv
data/zacharegkas2025_des/: README_data.md  ds_des_bin1.csv  metadata.json  wp_des_bin1.csv
data/zheng2007_sdss/: README_data.md  metadata.json  wp_mr21_sdss.csv
data/zumandelbaum2015_sdss/: Fig6_esd_10.2_M_10.6_measurements.txt  Fig6_esd_10.6_M_11.0_measurements.txt  Fig6_esd_11.0_M_11.2_measurements.txt  Fig6_esd_11.2_M_11.4_measurements.txt  Fig6_esd_11.4_M_12.0_measurements.txt  README_data.md  (+24 more)
docs/: Makefile  _permodel_auto.rst  autodiff_ds_hod_sensitivity.rst  autodiff_ds_sensitivity.rst  autodiff_hod_sensitivity.rst  autodiff_sensitivity.rst  benchmark_comparat2025.rst  benchmark_guo2018.rst  benchmark_guo2019.rst  benchmark_kravtsov2004.rst  benchmark_lange2025.rst  benchmark_leauthaud2012.rst  benchmark_more2015.rst  benchmark_vanutert2016.rst  benchmark_zacharegkas2025.rst  benchmark_zheng2007.rst  benchmark_zumandelbaum2015.rst  benchmark_zumandelbaum2015_multisample.rst  benchmarks.rst  benchmarks_deltasigma.rst  benchmarks_joint.rst  bgs_comparat2025_mstar10_joint_fit.rst  bgs_ls10_wp_survey.rst  bgs_m10_nl_allmodels.rst  bgs_m10_nonlinear_models.rst  conf.py  cosmology.rst  data_formats.rst  data_hosting.rst  data_io.rst  direct_prediction_gal_gas.rst  fitting.rst  fitting_more2015.rst  forward_model_showcase.rst  galaxies.rst  halos.rst  hod_more2015.rst  hod_zumandelbaum2015.rst  index.rst  overview.rst  (+5 more)
hod_mod/: __init__.py  __main__.py  paths.py
oarsub/: README.md  fit_bgs_zm15_joint_mcmc.sh  fit_comparat2025_agn_lum.sh  fit_comparat2025_agn_occ.sh  fit_comparat2025_gas_full.sh  fit_comparat2025_gas_shape.sh  fit_comparat2025_gas_temp.sh
tests/: conftest.py  test_accuracy.py  test_agn_duty_cycle.py  test_agn_ham.py  test_agn_hod.py  test_aum_comparison.py  test_baryon_fraction.py  test_beyond_linear_bias.py  test_clf_model.py  test_cli.py  test_clustering_prediction.py  test_concentration.py  test_config_loading.py  test_conversions_helpers.py  test_cosmology.py  test_cross_clustering.py  test_cross_spectra.py  test_data_io.py  test_data_registry.py  test_dpm_complete.py  test_fitter_integration.py  test_fitting.py  test_galaxies.py  test_gas_profiles.py  test_intrinsic_alignment.py  test_jax_conversions.py  test_leauthaud12_hod.py  test_nonlinear_halo_model.py  test_power_spectrum_extra.py  test_public_api.py  test_refactor_coverage.py
(+255 files in other folders)
