[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hod_mod"
version = "0.0.4"
description = "HOD galaxy clustering and weak lensing prediction and fitting"
authors = [{name = "Johan Comparat", email = "johan.comparat@pm.me"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "matplotlib",
    "camb",
    "colossus",
    "h5py",
    "jax",
    "jaxlib",
    "AletheiaCosmo",
]

[project.optional-dependencies]
fitting   = ["emcee", "pyyaml", "pandas"]
dev       = ["pytest", "pytest-cov", "sphinx", "sphinx-rtd-theme", "numpydoc"]
csst      = ["CEmulator @ git+https://github.com/czymh/csstemu"]
aemulusnu = ["aemulusnu_hmf @ git+https://github.com/DelonShen/aemulusnu_hmf"]
emulators = ["hod_mod[csst,aemulusnu]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hod_mod*"]

[tool.setuptools.package-data]
"hod_mod.data.agn" = ["*.txt", "*.ascii"]
"hod_mod.data.benchmarks" = ["*.csv", "*.json"]
"hod_mod.data.bnl" = ["*.npy", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["*/hod_mod/scripts/*"]

[tool.coverage.report]
omit = ["*/hod_mod/scripts/*"]
